mejoras visuales  "pedidos"

--- a/pedidosApp/Views/OrderItems/Index.cshtml
+++ b/pedidosApp/Views/OrderItems/Index.cshtml
@@ -1,4 +1,4 @@
-@model IEnumerable<pedidosApp.Models.OrderItem>
+﻿@model IEnumerable<pedidosApp.Models.OrderItem>
 
 @{
     ViewData["Title"] = "Index";
